# TelegramChatbot

./: .dockerignore  .env.prod  .gitignore  BOT_MEMORY_SUMMARY.md  Dockerfile  README.md  bot.py  environment.yaml  memory.py  mlflow.db  pyproject.toml  requirements.txt  run.py  setup_env.ps1  setup_env.sh  setup_venv.ps1  setup_venv.sh
config/: ai_rules.yaml  example_config.json  example_config.yaml  example_system.yaml  persona.yaml  prompt_template.txt
config/api_config/: global_config.json  global_config.yaml
data/topics/: topics_zh_general.txt  topics_zh_life.txt  topics_zh_tech.txt
docs/en/: INSTALL..md
docs/zh-CN/: AI优化后实现长期记忆的方法.md  ARCHITECTURE.md  CODE_REVIEW_NONEBOT.md  COMPONENT_GUIDE.md  DEBUG_LIST.md  DEVELOPMENT.md  DEVELOPMENT_JOURNEY.md  INSTALL.md  README.md  SYSTEM_ARCHITECTURE.md  dev_plan.md  程序员的情感自救README.md
scripts/: 01_bootstrap_model.py  02_simulate_dialogue.py  03_evaluate_responses.py  04_prepare_sft_data.py  05_train_lora.py  06_rerun_evaluation.py  README.md
src/agent/: README.md  __init__.py  empathy_planner.py  orchestrator.py  state.py
src/bot/: app.py  main.py  proactive_messaging.py  wiring.py
src/client/: __init__.py  base.py
src/components/: example_component.py
src/core/: api_registry.py  chat_service.py  config.py  config_loader.py  context.py  context_snapshot.py  interaction.py  llm_client.py  logger.py  memory_ingest.py  proactive_service.py  prompt_manager.py  session_controller.py  summary_contract.py  utils.py
src/llm_system/: README.md  local_api_caller.py
src/memory/: long_term.py  persona_memory.py  (+1 more)
(+49 files in other folders)
