[project]
name = "Telegram_Chatbot"
version = "0.1.0"
description = "Telegram_Chatbot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "Telegram", module_name = "nonebot.adapters.telegram" }
]
plugins = ["nonebot_plugin_deepseek"]
plugin_dirs = []
builtin_plugins = ["echo", "single_session"]
